# vibedb

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  check_no_mod_rs.sh  demo.sql  schema_example.db  test_create_table.sql  test_delete_update.sh  test_psql.sh
.claude/commands/: refactor.md
docs/: README.md  api_guide.md  architecture.md  btree_architecture.md  btree_concurrency.md  btree_examples.md  btree_troubleshooting.md  implementation_summary.md  postgresql_wire_protocol.md  refactoring_suggestions.md
docs/design/: README.md  access.md  buffer_pool.md  catalog.md  roadmap.md  storage.md
docs/temp/: executor_design.md
examples/: README.md  aggregate_demo.rs  aggregation_basics.rs  basic_usage.rs  btree_index.rs  create_table_demo.rs  crud_operations.rs  executor_demo.rs  expression_demo.rs  expression_in_action.rs  filter_executor.rs  filter_expressions_advanced.rs  group_by_demo.rs  hash_join_example.rs  limit_executor.rs  mvcc_demo.rs  nested_loop_join_demo.rs  nested_loop_join_mock.rs  planner_demo.rs  projection_executor.rs  psql_server.rs  query_operators_demo.rs  recovery_demo.rs  sales_analytics.rs  schema_usage.rs  simple_aggregate_test.rs  sort_executor.rs  system_tables.rs  transaction_basic.rs  transaction_demo.rs
src/: access.rs  catalog.rs  concurrency.rs  database.rs  executor.rs  expression.rs  lib.rs  main.rs  network.rs  planner.rs  recovery.rs  session.rs  sql.rs  storage.rs  transaction.rs
src/access/: btree.rs  heap.rs  mvcc_heap.rs  scan.rs  tuple.rs  value.rs
src/catalog/: column_info.rs  (+3 more)
tests/: integration_test.rs
(+59 files in other folders)
