[package]
name = "vibedb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
bytes = "1"
byteorder = "1"
clap = { version = "4.0", features = ["derive"] }
dashmap = "6.0"
env_logger = "0.10"
parking_lot = "0.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3.0"
